# CredSight

./: .env.example  .env.sandbox.example  .gitignore  CLAUDE.md  README.md  TASKS.md  TODOS.md  implementation-guide.md  pyproject.toml  requirements.txt
doc/: prd.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/.gstack/: browse-audit.jsonl  claude-available.json  terminal-internal-token
frontend/src/: App.tsx  api.ts  index.css  mock.ts  types.ts
frontend/src/components/: AuditTrail.tsx  Brand.tsx  GBrain.tsx  GraphView.tsx  HealthCard.tsx  Landing.tsx  LearningLoop.tsx  NeedsCard.tsx  PathToBankability.tsx  Portfolio.tsx  UnderwriterConsole.tsx  UploadMSME.tsx  ui.tsx
reference-docs/: 00-README.md  01-idea-agentic-reframe.md  02-architecture.md  03-agent-specs.md  04-scoring-model.md  05-data-and-integrations.md  06-build-plan-and-demo.md  07-agentic-capabilities.md  coco-index.md  orientation-notes.md
samples/: bank_statement_generic.csv  bank_statement_hdfc.csv  gst_returns.json  gst_returns_simple.csv
src/credsight/: __init__.py  config.py
src/credsight/agents/: __init__.py  graph.py  llm_tools.py  narrate.py  orchestrator.py  prompts.py  run.py  subagents.py  tools.py
src/credsight/api/: __init__.py  app.py  schemas.py
src/credsight/connectors/: __init__.py  base.py  sandbox.py  synthetic.py
src/credsight/governance/: __init__.py  audit.py  faithfulness.py  hitl.py  learning.py
src/credsight/knowledge/: __init__.py  brain.py  graph.py  index.py  models.py  organize.py  parse.py  pgvector_backend.py
src/credsight/knowledge/policies/: fraud-and-consent.md  thin-file-ntc.md  working-capital-eligibility.md
src/credsight/mcp_servers/: __init__.py  action_server.py  common.py  ingestion_server.py
src/credsight/needs/: classifier.py  products.py
src/credsight/reconciliation/: __init__.py  reconcile.py  rules.py
src/credsight/scoring/: __init__.py  artifacts.py  confidence.py  dimensions.py  eval.py  explain.py  features.py  model.py  pathways.py  policy.py  schema.py  train.py
src/credsight/service/: __init__.py  demo_seed.py  models.py  outcomes.py  pipeline.py  store.py
tests/: test_api.py  test_d2.py  test_e2e_demo_flows.py  test_governance.py  test_integrations.py  test_knowledge.py  test_mcp_tools.py  test_narrate.py  test_orchestrator.py  test_pathways.py  test_pipeline.py  test_sandbox_connectors.py  test_scoring.py  test_training.py
